# stock_index_info

./: .gitignore  .pre-commit-config.yaml  CODEBUDDY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: sync-data.yml
data/: indices.db  nasdaq100.csv  sp500.csv
docs/: stock-index-query-design.md
docs/plans/: 2025-01-06-price-to-tangible-book.md  2025-06-11-pe-with-avg-income.md  2025-06-12-csv-export-design.md  2025-12-06-stock-index-query.md  2025-12-07-recent-filings.md  2025-12-07-reuters-valuation-link.md  2025-12-07-sec-10q-report.md  2025-12-09-7year-avg-pe.md  2025-12-09-fix-7year-avg-pe.md  2025-12-11-nta-ncav-valuation.md
scripts/: export_csv.py
src/stock_index_info/: __init__.py  alpha_vantage.py  balance_sheet.py  bot.py  config.py  db.py  exchange_rate.py  models.py  sec_edgar.py
src/stock_index_info/scrapers/: __init__.py  base.py  nasdaq100.py  sp500.py
tests/: __init__.py  conftest.py  test_alpha_vantage.py  test_balance_sheet.py  test_balance_sheet_db.py  test_db.py  test_exchange_rate.py  test_integration.py  test_models.py  test_sec_edgar.py
tests/test_scrapers/: test_nasdaq100.py  test_sp500.py
